# lira

./: Cargo.toml  README.md  grammar.m  output.li
examples/: async.li  fn.li  json.li  let.li  one.li  test.li
src/: ast.rs  ir.rs  lexer.rs  lib.rs  main.rs  minifier.rs  parser.rs
src/ir/: context.rs  interner.rs  table.rs
src/lexer/: README.md  str_litteral.rs  string.rs  tokens.rs
src/parser/: README.md  grammar.lalrpop  string.rs
tests/: lexer.rs
