[package]
name = "lira"
version = "0.1.0"
edition = "2024"

[dependencies]
lalrpop-util = { version = "0.22.1", default-features = false }
logos = "0.15.0"

[build-dependencies]
lalrpop = "0.22.1"

[profile.release]
opt-level = 3            # Maximum speed
lto = "fat"              # or "thin" for faster compile and somtimes faster runtime
codegen-units = 1        # Slower compile, better cross-function optimization
panic = "abort"          # Slightly smaller + faster runtime
strip = "debuginfo"      # Strip debug info to reduce I/O overhead
